<resources>
    <string name="app_name">Temda</string>

    <string name="Titulo">Bienvenido</string>
    <string name="action_settings">Configuraciones</string>
    <string name="Licores">Licores</string>
    <string name="Postres">Postres</string>
    <string name="Zapatos">Zapatos</string>
    <string name="Software">Software</string>
    <string name="Hardware">Hardware</string>
    <string name="Ropa">Ropa</string>
    <string name="Temda">Temda</string>
    <string name="usuario">Usuario</string>
    <string name="Inicio">Inicio</string>
</resources>
